[gd_scene load_steps=20 format=2]

[ext_resource path="res://entities/ship_player.gd" type="Script" id=1]
[ext_resource path="res://entities/background.gd" type="Script" id=2]
[ext_resource path="res://entities/camera.gd" type="Script" id=3]
[ext_resource path="res://entities/hud.gd" type="Script" id=4]
[ext_resource path="res://entities/Laser.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/health_bar.gd" type="Script" id=6]
[ext_resource path="res://entities/laser_timer.gd" type="Script" id=7]
[ext_resource path="res://entities/bouncing_bullet_timer.gd" type="Script" id=8]
[ext_resource path="res://assets/recharge bd.ttf" type="DynamicFontData" id=9]

[sub_resource type="PhysicsMaterial" id=11]
bounce = 0.5

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.313726, 0.882353, 0.0705882, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.247059, 0.65098, 0.435294, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.517647, 0.14902, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 0, 0.301961, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 1, 0.8, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.2, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.160784, 0.678431, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Player" type="RigidBody2D" groups=["player"]]
collision_layer = 3
collision_mask = 3
physics_material_override = SubResource( 11 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )
projectile_radius = 6

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, -48, 8, -48, 16, -8, 56, 8, 56, 16, 32, 24, 24, 24, 24, 32, -24, 32, -24, 24, -32, 24, -56, 16, -56, 8, -16, -8 )

[node name="Ship" type="Node2D" parent="."]

[node name="Cannon" type="Polygon2D" parent="Ship"]
scale = Vector2( 0.75, 1.5 )
color = Color( 0, 0.2, 1, 1 )
polygon = PoolVector2Array( -53.3333, -5.33333, -53.3333, 10.6667, -42.6667, 10.6667, -42.6667, -5.33333 )

[node name="Wing" type="Polygon2D" parent="Ship/Cannon"]
scale = Vector2( 1.33333, 0.666667 )
color = Color( 0.160784, 0.678431, 1, 1 )
polygon = PoolVector2Array( -8, -16, -8, 24, -32, 24, -56, 16, -56, 8 )

[node name="Stripe" type="Polygon2D" parent="Ship/Cannon/Wing"]
color = Color( 0, 0.2, 1, 1 )
polygon = PoolVector2Array( -16, 0, -16, 16, -40, 16, -40, 8 )

[node name="Cannon2" type="Polygon2D" parent="Ship"]
scale = Vector2( 0.75, 1.5 )
color = Color( 0, 0.2, 1, 1 )
polygon = PoolVector2Array( 42.6667, -5.33333, 42.6667, 2.96956, 42.6667, 10.6667, 53.3333, 10.6667, 53.3333, -5.33333 )

[node name="Wing2" type="Polygon2D" parent="Ship/Cannon2"]
scale = Vector2( 1.33333, 0.666667 )
color = Color( 0.160784, 0.678431, 1, 1 )
polygon = PoolVector2Array( 8, -16, 8, 24, 32, 24, 56, 16, 56, 8 )

[node name="Stripe2" type="Polygon2D" parent="Ship/Cannon2/Wing2"]
color = Color( 0, 0.2, 1, 1 )
polygon = PoolVector2Array( 16, 0, 16, 16, 40, 16, 40, 8 )

[node name="Flame" type="Polygon2D" parent="Ship"]
color = Color( 1, 0.517647, 0.14902, 1 )
polygon = PoolVector2Array( -8, 0, -16, 48, 0, 56, 16, 48, 8, 0 )

[node name="Body" type="Polygon2D" parent="Ship/Flame"]
color = Color( 0, 0.2, 1, 1 )
polygon = PoolVector2Array( -8, -48, 8, -48, 24, 24, 24, 32, -24, 32, -24, 24 )

[node name="Cockpit" type="Polygon2D" parent="Ship/Flame"]
color = Color( 0, 1, 0.8, 1 )
polygon = PoolVector2Array( -8, 0, -16, 24, -8, 16, 8, 16, 16, 24, 8, 0, 0, -8 )

[node name="LeftCannon" type="Position2D" parent="."]
position = Vector2( -36, -8 )

[node name="RightCannon" type="Position2D" parent="."]
position = Vector2( 36, -8 )

[node name="Laser" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, -48 )

[node name="ProjectileContainer" type="Node" parent="."]

[node name="CannonTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="LaserTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true

[node name="BouncingBulletTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true

[node name="Camera" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="Camera"]
current = true
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera/Camera2D"]

[node name="HUD" type="Control" parent="Camera/Camera2D/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="MC1" type="MarginContainer" parent="Camera/Camera2D/CanvasLayer/HUD"]
anchor_right = 1.0
margin_bottom = 14.0
custom_constants/margin_top = 32
custom_constants/margin_bottom = 32

[node name="Score" type="Label" parent="Camera/Camera2D/CanvasLayer/HUD/MC1"]
margin_top = 32.0
margin_right = 1920.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0.760784, 0.764706, 0.780392, 1 )
custom_fonts/font = SubResource( 10 )
text = "0"
align = 1
valign = 1

[node name="MC" type="MarginContainer" parent="Camera/Camera2D/CanvasLayer/HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -96.0
margin_right = 320.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBC" type="VBoxContainer" parent="Camera/Camera2D/CanvasLayer/HUD/MC"]
margin_left = 8.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 88.0

[node name="HBC" type="HBoxContainer" parent="Camera/Camera2D/CanvasLayer/HUD/MC/VBC"]
margin_right = 624.0
margin_bottom = 38.0
size_flags_vertical = 3

[node name="LaserTimer" type="ProgressBar" parent="Camera/Camera2D/CanvasLayer/HUD/MC/VBC/HBC"]
margin_right = 310.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 3.0
percent_visible = false
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="Camera/Camera2D/CanvasLayer/HUD/MC/VBC/HBC/LaserTimer"]

[node name="BouncingBulletTimer" type="ProgressBar" parent="Camera/Camera2D/CanvasLayer/HUD/MC/VBC/HBC"]
margin_left = 314.0
margin_right = 624.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 7 )
max_value = 8.0
step = 1.0
percent_visible = false
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="Camera/Camera2D/CanvasLayer/HUD/MC/VBC/HBC/BouncingBulletTimer"]

[node name="HealthBar" type="Control" parent="Camera/Camera2D/CanvasLayer/HUD/MC/VBC"]
margin_top = 42.0
margin_right = 624.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="Under" type="ProgressBar" parent="Camera/Camera2D/CanvasLayer/HUD/MC/VBC/HealthBar"]
margin_top = 4.0
margin_right = 624.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_value = 10.0
value = 10.0
percent_visible = false

[node name="Over" type="ProgressBar" parent="Camera/Camera2D/CanvasLayer/HUD/MC/VBC/HealthBar"]
margin_top = 4.0
margin_right = 624.0
margin_bottom = 40.0
size_flags_vertical = 3
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 10.0
value = 10.0
percent_visible = false

[node name="Tween" type="Tween" parent="Camera/Camera2D/CanvasLayer/HUD/MC/VBC/HealthBar"]

[node name="Background" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="timeout" from="BouncingBulletTimer" to="." method="_on_BouncingBulletTimer_timeout"]
